--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
   <meta charset="UTF-8" />
 
 <!-- ▼ Maintenance gate (must be before your main scripts) -->
-<!-- (Опц.) Поднимем шрифт раньше, чтобы экран выглядел сразу красиво -->
 <link href="https://fonts.googleapis.com/css2?family=Encode+Sans:wght@400;600;700;800&display=swap" rel="stylesheet" />
 
 <style>
@@ -14,8 +13,6 @@
   .tg-dark, [data-theme="dark"]{
     --m-bg:#0f0f0f; --m-text:#f5f5f5; --m-muted:#a3a1a2; --m-card:#161616; --m-border:#262626; --m-primary:#f5f5f5;
   }
-
-  /* контейнер на весь экран */
   #maintenanceScreen{
     position:fixed; inset:0; z-index:999999;
     display:none; align-items:center; justify-content:center; text-align:center;
@@ -24,8 +21,6 @@
     font-family:"Encode Sans", system-ui, -apple-system, Segoe UI, Roboto, Arial, "Noto Sans", sans-serif;
   }
   #maintenanceScreen.show{ display:flex; }
-
-  /* карточка */
   .m-card{
     width:min(560px, 100%);
     border:1px solid var(--m-border);
@@ -34,18 +29,15 @@
     box-shadow:0 12px 30px rgba(0,0,0,.10);
     padding:26px 22px;
   }
-
-  /* иконка-герой (встроенный SVG: wrench) */
   .m-hero{
     width:64px; height:64px; margin:0 auto 14px; border-radius:18px;
     display:grid; place-items:center;
     background:rgba(0,0,0,.06); border:1px solid var(--m-border);
   }
   .tg-dark .m-hero, [data-theme="dark"] .m-hero{ background:rgba(255,255,255,.05); }
-
+  .m-hero i{ width:28px; height:28px; } /* Lucide target */
   .m-title{ font-size:22px; font-weight:800; letter-spacing:.2px; }
   .m-sub{ color:var(--m-muted); margin-top:8px; line-height:1.35; font-size:15px; }
-
   .m-cta{ margin-top:18px; display:flex; justify-content:center; }
   .m-btn{
     display:inline-flex; align-items:center; gap:10px;
@@ -53,8 +45,7 @@
     border:1px solid var(--m-primary); background:var(--m-primary); color:var(--m-bg);
     font-weight:700; cursor:pointer;
   }
-  .m-btn svg{ width:18px; height:18px; flex:0 0 18px; }
-
+  .m-btn i{ width:18px; height:18px; }
   .m-note{ margin-top:12px; font-size:.92rem; color:var(--m-muted); }
   html.maintenance-lock, body.maintenance-lock{ overflow:hidden !important; }
 </style>
@@ -62,12 +53,8 @@
 <div id="maintenanceScreen" role="dialog" aria-modal="true" aria-live="polite" aria-label="Технические работы">
   <div class="m-card">
     <div class="m-hero" aria-hidden="true">
-      <!-- Lucide wrench (inline SVG) -->
-      <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.75" stroke-linecap="round" stroke-linejoin="round" aria-hidden="true">
-        <path d="M22 2l-6 6"/>
-        <path d="M3 22l6-6 3 3 7-7-3-3 6-6"/>
-        <path d="M14 7l3 3"/>
-      </svg>
+      <!-- Lucide icon from library -->
+      <i data-lucide="hard-hat"></i>
     </div>
     <div class="m-title">Технические работы</div>
     <div class="m-sub">
@@ -76,12 +63,7 @@
     </div>
     <div class="m-cta">
       <button id="mOpBtn" class="m-btn" type="button" aria-label="Написать оператору">
-        <!-- Lucide send (inline SVG) -->
-        <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.75" stroke-linecap="round" stroke-linejoin="round" aria-hidden="true">
-          <path d="M22 2L11 13"/>
-          <path d="M22 2l-7 20-4-9-9-4 20-7z"/>
-        </svg>
-        <span>Написать оператору</span>
+        <i data-lucide="send"></i><span>Написать оператору</span>
       </button>
     </div>
     <div class="m-note">Обычно это занимает немного времени.</div>
@@ -116,6 +98,12 @@
     window.open(url, '_blank', 'noopener');
   }
 
+  // Поддержка рендеринга Lucide для этого экрана (ждём, пока библиотека загрузится)
+  (function ensureLucide(){
+    if (window.lucide?.createIcons) { try { window.lucide.createIcons(); } catch {} return; }
+    setTimeout(ensureLucide, 50);
+  })();
+
   // Проверка режима (не кэшировать)
   (async () => {
     let cfg = null;
@@ -125,24 +113,29 @@
     }catch{ cfg = { maintenance:false }; }
 
     if (cfg?.maintenance){
-      // Блокируем приложение поверх
+      // Показать оверлей
       window.__APP_MAINTENANCE__ = true;
       const node = document.getElementById('maintenanceScreen');
       node.classList.add('show');
 
-      // доступность / блок взаимодействий
+      // Блокируем только приложение, не весь body (иначе кнопки станут некликабельны)
+      document.getElementById('app')?.setAttribute('aria-hidden','true');
+      try { document.getElementById('app').inert = true; } catch {}
       document.documentElement.classList.add('maintenance-lock');
       document.body.classList.add('maintenance-lock');
-      document.getElementById('app')?.setAttribute('aria-hidden','true');
-      try{ document.body.inert = true; }catch{}
 
-      // кнопка «Написать оператору»
+      // Кнопка «Написать оператору»
       const opUrl = cfg.opChat || 'https://t.me/evliseorder';
-      document.getElementById('mOpBtn')?.addEventListener('click', ()=>openExternal(opUrl));
+      const btn = document.getElementById('mOpBtn');
+      if (btn) btn.addEventListener('click', function onClick(e){
+        e.preventDefault();
+        openExternal(opUrl);
+      }, { passive: true });
     }
   })();
 </script>
 <!-- ▲ Maintenance gate -->
+
 
 
 
